--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@tippyjs/react": "^4.2.6",
     "apexcharts": "^5.3.5",
     "firebase": "^12.1.0",
     "leaflet": "^1.9.4",
@@ -20,7 +21,10 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.3",
-    "recharts": "^3.2.1"
+    "react-sparklines": "^1.7.0",
+    "recharts": "^3.2.1",
+    "swiper": "^12.0.2",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
