--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@tippyjs/react": "^4.2.6",
     "apexcharts": "^5.3.5",
     "firebase": "^12.1.0",
+    "framer-motion": "^12.23.22",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.3",
